--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"http://hgupta2363.github.io/calculator-with-redux"
   "name": "react-calculator",
   "version": "0.1.0",
   "private": true,
@@ -20,6 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
